[package]
name = "px2rem"
authors=["Ruzaji Yasin <menzil@live.cn>"]
description = "Convert css px to rem"
version = "0.1.0"
edition = "2021"
license = "MIT"


categories = ["tools"]

rust-version = "1.60"
homepage = "https://github.com/menzil/rust_px2rem"
keywords = ["css", "sass", "less"]

readme = "README.md"
repository = "https://github.com/menzil/rust_px2rem"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
